// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage should match the snapshot 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <div>
      React Helmet Async
    </div>
  </div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      ReactRouterDom Outlet Component
    </div>
    <p>
      <span
        data-mockid="Link"
      >
        Revenir à l’accueil
      </span>
    </p>
  </div>
</div>
`;

exports[`ErrorPage should match the snapshot, in a mobile viewport 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <div>
      React Helmet Async
    </div>
  </div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      ReactRouterDom Outlet Component
    </div>
    <p>
      <span
        data-mockid="Link"
      >
        Revenir à l’accueil
      </span>
    </p>
  </div>
</div>
`;
